trunk/Archive2/32/5e0b3404b0b9b6/output
main.cpp: In function 'int main()':
main.cpp:21:1: error: expected ';' before '}' token
 }
 ^
